tests/parser/should_fail/cmdFail004.hs
{-# LANGUAGE Arrows #-}
module CmdFail004 where

f = proc x -> (_ -> (_ -< _))
